domain/id_macros/tests/ui/cfg-attr-derive.rs
use id_macros::id;

#[id]
#[cfg_attr(all(), derive(Clone))]
pub struct CfgAttrDeriveId;

fn main() {}
